foundry_sources += files([
  'foundry-cli-command.c',
  'foundry-cli-command-tree.c',
  'foundry-command-line.c',
  'foundry-dbus-service.c',
])

foundry_private_sources += files([
  'foundry-cli-builtin-build.c',
  'foundry-cli-builtin-enter.c',
  'foundry-cli-builtin-init.c',
  'foundry-cli-builtin-device-list.c',
  'foundry-cli-builtin-device-switch.c',
  'foundry-cli-builtin-sdk-list.c',
  'foundry-cli-builtin-show.c',

  'foundry-command-line-local.c',
  'foundry-command-line-remote.c',
])

foundry_headers += files([
  'foundry-cli-command.h',
  'foundry-command-line.h',
  'foundry-dbus-service.h',
])

foundry_include_directories += [include_directories('.')]
