foundry_sources += files([
  'foundry-device.c',
  'foundry-device-chassis.c',
  'foundry-device-manager.c',
  'foundry-device-provider.c',
  'foundry-local-device.c',
  'foundry-triplet.c',
])

foundry_headers += files([
  'foundry-device.h',
  'foundry-device-chassis.h',
  'foundry-device-manager.h',
  'foundry-device-provider.h',
  'foundry-local-device.h',
  'foundry-triplet.h',
])

foundry_include_directories += [include_directories('.')]
