foundry_sources += files([
  'foundry-diagnostic.c',
  'foundry-diagnostic-builder.c',
  'foundry-diagnostic-manager.c',
  'foundry-diagnostic-provider.c',
])

foundry_headers += files([
  'foundry-diagnostic.h',
  'foundry-diagnostic-builder.h',
  'foundry-diagnostic-manager.h',
  'foundry-diagnostic-provider.h',
])

foundry_include_directories += [include_directories('.')]
