foundry_sources += files([
  'foundry-diagnostic.c',
  'foundry-diagnostic-builder.c',
  'foundry-diagnostic-manager.c',
  'foundry-diagnostic-provider.c',
  'foundry-diagnostic-tool.c',
])

foundry_headers += files([
  'foundry-diagnostic.h',
  'foundry-diagnostic-builder.h',
  'foundry-diagnostic-manager.h',
  'foundry-diagnostic-provider.h',
  'foundry-diagnostic-tool.h',
])

foundry_include_directories += [include_directories('.')]
