foundry_sources += files([
  'foundry-documentation.c',
  'foundry-documentation-manager.c',
  'foundry-documentation-provider.c',
  'foundry-documentation-query.c',
  'foundry-documentation-root.c',
])

foundry_headers += files([
  'foundry-documentation.h',
  'foundry-documentation-manager.h',
  'foundry-documentation-provider.h',
  'foundry-documentation-query.h',
  'foundry-documentation-root.h',
])

foundry_include_directories += [include_directories('.')]
