foundry_sources += files([
  'foundry-text-buffer.c',
  'foundry-text-document.c',
  'foundry-text-edit.c',
  'foundry-text-manager.c',
])

foundry_private_sources += files([
  'foundry-simple-text-buffer.c',
])

foundry_headers += files([
  'foundry-text-buffer.h',
  'foundry-text-document.h',
  'foundry-text-edit.h',
  'foundry-text-manager.h',
])

foundry_include_directories += [include_directories('.')]
