foundry_sources += files([
  'foundry-language-guesser.c',
  'foundry-text-buffer.c',
  'foundry-text-document.c',
  'foundry-text-document-addin.c',
  'foundry-text-edit.c',
  'foundry-text-iter.c',
  'foundry-text-manager.c',
])

foundry_private_sources += files([
  'foundry-simple-text-buffer.c',
])

foundry_headers += files([
  'foundry-language-guesser.h',
  'foundry-text-buffer.h',
  'foundry-text-document.h',
  'foundry-text-document-addin.h',
  'foundry-text-edit.h',
  'foundry-text-iter.h',
  'foundry-text-manager.h',
])

foundry_include_directories += [include_directories('.')]
