foundry_sources += files([
  'foundry-file.c',
  'foundry-file-manager.c',
  'foundry-path-cache.c',
  'foundry-language-guesser.c',
])

foundry_headers += files([
  'foundry-file.h',
  'foundry-file-manager.h',
  'foundry-path-cache.h',
  'foundry-language-guesser.h',
])

foundry_include_directories += [include_directories('.')]
