foundry_sources += files([
  'foundry-file.c',
  'foundry-file-manager.c',
  'foundry-file-monitor.c',
  'foundry-file-monitor-event.c',
  'foundry-path-cache.c',
])

foundry_headers += files([
  'foundry-file.h',
  'foundry-file-manager.h',
  'foundry-file-monitor.h',
  'foundry-file-monitor-event.h',
  'foundry-path-cache.h',
])

foundry_include_directories += [include_directories('.')]
