foundry_sources += files([
  'foundry-lsp-client.c',
  'foundry-lsp-manager.c',
  'foundry-lsp-provider.c',
  'foundry-lsp-server.c',
  'foundry-plugin-lsp-provider.c',
])

foundry_private_sources += files([
  'foundry-plugin-lsp-server.c',
])

foundry_headers += files([
  'foundry-lsp-client.h',
  'foundry-lsp-manager.h',
  'foundry-lsp-provider.h',
  'foundry-lsp-server.h',
  'foundry-plugin-lsp-provider.h',
])

foundry_include_directories += [include_directories('.')]
