foundry_sources += files([
  'foundry-directory-reaper.c',
  'foundry-path.c',
  'foundry-process-launcher.c',
  'foundry-shell.c',
  'foundry-subprocess.c',
  'foundry-unix-fd-map.c',
])

foundry_headers += files([
  'foundry-directory-reaper.h',
  'foundry-path.h',
  'foundry-process-launcher.h',
  'foundry-shell.h',
  'foundry-subprocess.h',
  'foundry-unix-fd-map.h',
])

foundry_include_directories += [include_directories('.')]
