foundry_gtk_sources += files([
  'foundry-source-completion-provider.c',
])

foundry_gtk_headers += files([
  'foundry-source-completion-provider.h',
])

foundry_gtk_private_sources += files([
  'foundry-source-completion-proposal.c',
  'foundry-source-completion-request.c',
])

foundry_gtk_include_directories += [include_directories('.')]
