foundry_gtk_sources += files([
  'foundry-source-buffer.c',
  'foundry-source-view.c',
])

foundry_gtk_headers += files([
  'foundry-source-buffer.h',
  'foundry-source-view.h',
])

foundry_gtk_private_sources += files([
  'foundry-source-buffer-provider.c',
  'foundry-source-language-guesser.c',
  'foundry-source-language-guesser.h',
])

foundry_gtk_include_directories += [include_directories('.')]
