libfoundry_config_conf.set10('FOUNDRY_FEATURE_ACP', true)

foundry_sources += files([
  'foundry-acp-agent.c',
  'foundry-acp-changed-file.c',
  'foundry-acp-client.c',
  'foundry-acp-connection.c',
  'foundry-acp-content-block.c',
  'foundry-acp-enums.c',
  'foundry-acp-event.c',
  'foundry-acp-manager.c',
  'foundry-acp-permission-option.c',
  'foundry-acp-permission-policy.c',
  'foundry-acp-permission-request.c',
  'foundry-acp-permission-response.c',
  'foundry-acp-project-client.c',
  'foundry-acp-provider.c',
  'foundry-acp-prompt-result.c',
  'foundry-acp-session.c',
  'foundry-acp-session-update.c',
  'foundry-acp-terminal.c',
  'foundry-acp-terminal-output.c',
])

foundry_headers += files([
  'foundry-acp-agent.h',
  'foundry-acp-changed-file.h',
  'foundry-acp-client.h',
  'foundry-acp-connection.h',
  'foundry-acp-content-block.h',
  'foundry-acp-enums.h',
  'foundry-acp-event.h',
  'foundry-acp-manager.h',
  'foundry-acp-permission-option.h',
  'foundry-acp-permission-policy.h',
  'foundry-acp-permission-request.h',
  'foundry-acp-permission-response.h',
  'foundry-acp-project-client.h',
  'foundry-acp-provider.h',
  'foundry-acp-prompt-result.h',
  'foundry-acp-session.h',
  'foundry-acp-session-update.h',
  'foundry-acp-terminal.h',
  'foundry-acp-terminal-output.h',
])

foundry_private_sources += files([
])

foundry_include_directories += [include_directories('.')]
