libfoundry_config_conf.set10('FOUNDRY_FEATURE_DEBUGGER', true)

foundry_sources += files([
  'foundry-debugger-manager.c',
  'foundry-debugger-provider.c',
  'foundry-debugger-target.c',
  'foundry-debugger-target-command.c',
  'foundry-debugger-target-process.c',
  'foundry-debugger-target-remote.c',
  'foundry-debugger.c',
])

foundry_headers += files([
  'foundry-debugger-manager.h',
  'foundry-debugger-provider.h',
  'foundry-debugger-target.h',
  'foundry-debugger-target-command.h',
  'foundry-debugger-target-process.h',
  'foundry-debugger-target-remote.h',
  'foundry-debugger.h',
])

foundry_include_directories += [include_directories('.')]
