libfoundry_config_conf.set10('FOUNDRY_FEATURE_DEBUGGER', true)

foundry_sources += files([
  'foundry-debugger-breakpoint.c',
  'foundry-debugger-countpoint.c',
  'foundry-debugger-manager.c',
  'foundry-debugger-mapped-region.c',
  'foundry-debugger-module.c',
  'foundry-debugger-provider.c',
  'foundry-debugger-target-command.c',
  'foundry-debugger-target-process.c',
  'foundry-debugger-target-remote.c',
  'foundry-debugger-target.c',
  'foundry-debugger-trap.c',
  'foundry-debugger-watchpoint.c',
  'foundry-debugger.c',
])

foundry_headers += files([
  'foundry-debugger-breakpoint.h',
  'foundry-debugger-countpoint.h',
  'foundry-debugger-manager.h',
  'foundry-debugger-mapped-region.h',
  'foundry-debugger-module.h',
  'foundry-debugger-provider.h',
  'foundry-debugger-target-command.h',
  'foundry-debugger-target-process.h',
  'foundry-debugger-target-remote.h',
  'foundry-debugger-target.h',
  'foundry-debugger-trap.h',
  'foundry-debugger-watchpoint.h',
  'foundry-debugger.h',
])

foundry_include_directories += [include_directories('.')]
