libfoundry_config_conf.set10('FOUNDRY_FEATURE_TEXT', true)

foundry_sources += files([
  'foundry-on-type-formatter.c',
  'foundry-rename-provider.c',
  'foundry-simple-text-buffer.c',
  'foundry-text-buffer.c',
  'foundry-text-buffer-provider.c',
  'foundry-text-document.c',
  'foundry-text-document-addin.c',
  'foundry-text-edit.c',
  'foundry-text-iter.c',
  'foundry-text-manager.c',
])

foundry_private_sources += files([
  'foundry-simple-text-buffer-provider.c',
])

foundry_headers += files([
  'foundry-on-type-formatter.h',
  'foundry-rename-provider.h',
  'foundry-simple-text-buffer.h',
  'foundry-text-buffer.h',
  'foundry-text-buffer-provider.h',
  'foundry-text-document.h',
  'foundry-text-document-addin.h',
  'foundry-text-edit.h',
  'foundry-text-iter.h',
  'foundry-text-manager.h',
])

foundry_include_directories += [include_directories('.')]
