libfoundry_config_conf.set10('FOUNDRY_FEATURE_FORGE', true)

foundry_sources += files([
  'foundry-forge.c',
  'foundry-forge-issue.c',
  'foundry-forge-listing.c',
  'foundry-forge-manager.c',
  'foundry-forge-query.c',
])

foundry_private_sources += files([
  'foundry-forge-listing-page.c',
])

foundry_headers += files([
  'foundry-forge.h',
  'foundry-forge-issue.h',
  'foundry-forge-listing.h',
  'foundry-forge-manager.h',
  'foundry-forge-query.h',
])

foundry_include_directories += [include_directories('.')]
