foundry_sources += files([
  'foundry-gir.c',
  'foundry-gir-markdown.c',
  'foundry-gir-node.c',
])

foundry_headers += files([
  'foundry-gir.h',
  'foundry-gir-markdown.h',
  'foundry-gir-node.h',
])

foundry_private_sources += files([
])

foundry_include_directories += [include_directories('.')]
